--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Midnight theme
+title: Adrian's Website
 description: Midnight is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
